_sass/custom/custom.scss
body {
  padding-bottom: 0px !important;
}

a.site-title {
  padding: 0px;
  display: flex;
  padding-left: 14px;
  align-items: center;
}

footer.site-footer {
  display: none;
}

div.footer-icons {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 20px;
  
  a {
    color: inherit;
    text-decoration: none;
    transition: 0.2s ease-in-out;
  }

  a:hover {
    color: lighten($color: $link-color, $amount: 15%);
  }

  i {
    margin: 8px;
  }
}

@media (min-width: 800px) {
  .site-title {
    padding-left: 0px !important;
    justify-content: center;
  }
}

